feat: tag with the image with opencode version too

--- a/opencode/Makefile
+++ b/opencode/Makefile
@@ -3,10 +3,9 @@ SHELL := /usr/bin/env bash # Use bash syntax, mitigates dash's printf on Debian(
 # Detect if podman is available, otherwise use docker.
 CONTAINER_CMD := $(shell if command -v podman >/dev/null 2>&1; then echo "podman"; else echo "docker"; fi)
 
-# Allow overriding the image tag via `make opencode-image TAG=1.0.0`.
+# Allow overriding the image tag via `make opencode-image TAG=my_flavour`.
 TAG ?= latest
 IMAGE_NAME = opencode
-FULL_IMAGE_NAME = $(IMAGE_NAME):$(TAG)
 
 
 
@@ -17,22 +16,24 @@ help:
 	@echo "▀▀▀▀▀▀"
 	@echo
 	@echo "Available targets:"
-	@echo "    all, opencode-image: Create the container."
-	@echo "    clean:               Clean all generated files and images."
+	@echo "    all, image:   Create the container image."
+	@echo "    clean:        Clean all generated files and images."
 	@echo
 	@echo "Usage:"
-	@echo "    make opencode-image TAG=1.0.0  # Build with a custom tag"
+	@echo "    make image TAG=my_flavour  # Build with a custom tag"
 	@echo
 
 
 
-all: opencode-image
+.PHONY: all
+all: image
 
 
 
-.PHONY: opencode-image
-opencode-image:
-	$(CONTAINER_CMD) build --platform linux/amd64 --tag $(FULL_IMAGE_NAME) .
+.PHONY: image
+image:
+	$(CONTAINER_CMD) build --platform linux/amd64 --tag $(IMAGE_NAME):$(TAG) .
+	$(CONTAINER_CMD) tag $(IMAGE_NAME):$(TAG) $(IMAGE_NAME):$(shell $(CONTAINER_CMD) run --rm $(IMAGE_NAME):$(TAG) opencode --version)
 
 
 
