feat: add shellcheck python-pylint autopep8, some agents use these.

--- a/opencode/Dockerfile
+++ b/opencode/Dockerfile
@@ -1,9 +1,10 @@
 FROM docker.io/archlinux
 
-RUN pacman -Sy --noconfirm zip unzip mc nnn htop netcat && \
-    pacman -Scc --noconfirm
+RUN pacman -Sy --noconfirm zip unzip nnn \
+        shellcheck python-pylint autopep8 \
+    && pacman -Scc --noconfirm
 
-RUN touch /root/.bashrc; curl -fsSL https://opencode.ai/install | bash
+RUN touch /root/.bashrc && curl -fsSL https://opencode.ai/install | bash
 
 ENV PATH="/root/.opencode/bin:${PATH}"
 
