--- a/opencode/Makefile
+++ b/opencode/Makefile
@@ -3,8 +3,7 @@ SHELL := /usr/bin/env bash # Use bash syntax, mitigates dash's printf on Debian(
 # Detect if podman is available, otherwise use docker.
 CONTAINER_CMD := $(shell if command -v podman >/dev/null 2>&1; then echo "podman"; else echo "docker"; fi)
 
-# Allow overriding the image tag via `make opencode-image TAG=my_flavour`.
-TAG ?= latest
+# The container name
 IMAGE_NAME = opencode
 
 
@@ -20,7 +19,7 @@ help:
 	@echo "    clean:        Clean all generated files and images."
 	@echo
 	@echo "Usage:"
-	@echo "    make image TAG=my_flavour  # Build with a custom tag"
+	@echo "    make image"
 	@echo
 
 
@@ -32,11 +31,10 @@ all: image
 
 .PHONY: image
 image:
-	$(CONTAINER_CMD) build --platform linux/amd64 --tag $(IMAGE_NAME):$(TAG) .
-	$(CONTAINER_CMD) tag $(IMAGE_NAME):$(TAG) $(IMAGE_NAME):$(shell $(CONTAINER_CMD) run --rm $(IMAGE_NAME):$(TAG) opencode --version)
+	$(CONTAINER_CMD) build --platform linux/amd64 --tag $(IMAGE_NAME):latest .
 
 
 
 .PHONY: clean
 clean:
-	$(CONTAINER_CMD) image rm $(IMAGE_NAME)
+	-$(CONTAINER_CMD) image rm $(IMAGE_NAME):latest
