docs: fix opencode version building documentation
- Fix directory references from ollama to opencode in README
- Update example version to opencode format (0.3.11)
- Add specific version build instruction to AGENTS.md

--- a/opencode/Makefile
+++ b/opencode/Makefile
@@ -6,6 +6,8 @@ CONTAINER_CMD := $(shell if command -v podman >/dev/null 2>&1; then echo "podman
 
 # The container name
 IMAGE_NAME = opencode
+# Use version from the user or autodetect the latest.
+VERSION ?= $(shell curl -s https://api.github.com/repos/sst/opencode/releases/latest | grep '"tag_name"' | sed -E 's/.*"v([^"]+)".*/\1/')
 
 
 
@@ -21,7 +23,10 @@ help:
 	@echo
 	@echo "Usage:"
 	@echo "    make image"
+	@echo "    make image VERSION=1.0.51  # Build specific (older) version"
 	@echo
+	@echo "Developer info:"
+	@printf -- "- SHELL=%q, CONTAINER_CMD=%q, VERSION=%q.\n\n" "$(SHELL)" "$(CONTAINER_CMD)" "$(VERSION)"
 
 
 
@@ -32,7 +37,8 @@ all: image
 
 .PHONY: image
 image:
-	$(CONTAINER_CMD) build --platform linux/amd64 --tag $(IMAGE_NAME):latest .
+	"$(CONTAINER_CMD)" build --build-arg VERSION=$(VERSION) --platform linux/amd64 \
+            --tag localhost/$(IMAGE_NAME):$(VERSION) --tag localhost/$(IMAGE_NAME):latest .
 
 
 
