--- a/ollama/Makefile
+++ b/ollama/Makefile
@@ -37,7 +37,8 @@ all: image
 
 .PHONY: image
 image:
-	"$(CONTAINER_CMD)" build --build-arg VERSION=$(VERSION) --platform linux/amd64 \
+	"$(CONTAINER_CMD)" build --build-arg VERSION=$(VERSION) --build-arg USER=$(USER) \
+            --build-arg UID=$(shell id -u) --build-arg GID=$(shell id -g) --platform linux/amd64 \
             --tag localhost/$(IMAGE_NAME):$(VERSION) --tag localhost/$(IMAGE_NAME):latest .
 
 
