--- a/opencode/Containerfile
+++ b/opencode/Containerfile
@@ -18,7 +18,7 @@ RUN dnf -y makecache && \
         podman podman-compose podman-docker fuse-overlayfs containernetworking-plugins buildah skopeo openssh-clients cpp git-core sqlite \
         which curl git zip unzip nnn mc vim-enhanced pico nano \
         findutils gawk jq sed util-linux \
-        cmake clang-tools-extra shellcheck python3-pylint python3-autopep8 make \
+        cmake clang-tools-extra shellcheck whiptail python3-pylint python3-autopep8 make \
         glow nodejs npm \
         shfmt black uv ruff python3-isort python3-fixit \
         yamllint hadolint python3-ansible-lint csslint rpmlint gitlint \
