--- a/opencode/configs/opencode.jsonc
+++ b/opencode/configs/opencode.jsonc
@@ -10,13 +10,14 @@
       "name": "Ollama (local)",
       "options": { "baseURL": "http://127.0.0.1:11434/v1" },
       "models": {
-        "qwen3-coder:30b":  { "name": "qwen3-coder:30b"  }, // Context: 256K
-        "qwen3:8b":         { "name": "qwen3:8b"         }, // Context: 40K
-        "qwen3:30b":        { "name": "qwen3:30b"        }, // Context: 256K
-        "mistral:7b":       { "name": "mistral:7b"       }, // Context: 32K
-        "mistral-nemo:12b": { "name": "mistral-nemo:12b" }, // Context: 1000K
-        "mistral-small:22b":{ "name": "mistral-small:22b"}, // Context: 128K
-        "gpt-oss:20b":      { "name": "gpt-oss:20b"      }  // Context: 128K
+        "qwen3-coder:30b":              { "name": "qwen3-coder:30b"              }, // Context: 256K
+        "qwen3:8b":                     { "name": "qwen3:8b"                     }, // Context: 40K
+        "qwen3:30b":                    { "name": "qwen3:30b"                    }, // Context: 256K
+        "mistral:7b":                   { "name": "mistral:7b"                   }, // Context: 32K
+        "mistral-nemo:12b":             { "name": "mistral-nemo:12b"             }, // Context: 1000K
+        "mistral-small:22b":            { "name": "mistral-small:22b"            }, // Context: 128K
+        "gpt-oss:20b":                  { "name": "gpt-oss:20b"                  }, // Context: 128K
+        "anarko/qwen3-coder-flash:30b": { "name": "anarko/qwen3-coder-flash:30b" }  // Context: 256K
       }
     }
   }
